--- a/package.json
+++ b/package.json
@@ -30,17 +30,17 @@
   "dependencies": {
     "@apollo/react-hooks": "^3.1.3",
     "antd": "3.23.6",
-    "apollo-cache-inmemory": "^1.5.1",
-    "apollo-client": "^2.5.1",
-    "apollo-link": "^1.2.11",
-    "apollo-link-context": "^1.0.17",
-    "apollo-link-error": "^1.1.10",
-    "apollo-link-http": "^1.5.14",
+    "apollo-cache-inmemory": "^1.6.3",
+    "apollo-client": "^2.6.4",
+    "apollo-link": "^1.2.13",
+    "apollo-link-context": "^1.0.19",
+    "apollo-link-error": "^1.1.12",
+    "apollo-link-http": "^1.5.16",
     "aws-sdk": "^2.478.0",
     "axios": "^0.19.0",
     "braft-editor": "^2.3.8",
     "coupon-code": "^0.4.5",
-    "fingerprintjs2": "^2.0.6",
+    "fingerprintjs2": "^2.1.0",
     "graphql": "^14.5.8",
     "graphql-tag": "^2.10.1",
     "jsonwebtoken": "^8.5.1",
@@ -49,63 +49,59 @@
     "node-sass": "^4.13.0",
     "query-string": "^6.9.0",
     "ramda": "^0.26.1",
-    "react": "^16.11.0",
-    "react-apollo": "^2.5.5",
-    "react-apollo-hooks": "^0.4.5",
+    "rc-slider": "^8.7.1",
+    "rc-tooltip": "^4.0.0-alpha.3",
+    "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.10",
-    "react-dom": "^16.11.0",
+    "react-dom": "^16.12.0",
     "react-facebook-pixel": "^0.1.3",
-    "react-ga": "^2.6.0",
+    "react-ga": "^2.7.0",
     "react-helmet": "^5.2.1",
     "react-messenger-customer-chat": "^0.7.2",
     "react-player": "1.11.1",
-    "react-responsive": "^7.0.0",
+    "react-responsive": "^8.0.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.2.0",
     "react-scroll": "^1.7.14",
-    "react-social-login": "^3.4.5",
+    "react-social-login": "^3.4.6",
     "react-sortablejs": "^1.5.1",
-    "react-svg": "^10.0.13",
-    "schema-dts": "^0.4.3",
-    "sortablejs": "^1.9.0",
+    "react-svg": "^10.0.25",
+    "schema-dts": "^0.4.5",
+    "sortablejs": "^1.10.1",
     "styled-components": "^4.4.1",
     "styled-system": "^5.1.2",
     "throttle-typescript": "^1.0.1",
-    "use-query-params": "^0.4.4",
+    "use-query-params": "^0.4.5",
     "use-react-router": "^1.0.7",
     "uuid": "^3.3.3",
     "yup": "^0.27.0"
   },
   "devDependencies": {
-    "@storybook/addon-actions": "^5.1.9",
-    "@storybook/addon-links": "^5.1.9",
-    "@storybook/addons": "^5.1.9",
-    "@storybook/react": "^5.1.9",
     "@types/braft-editor": "^2.2.0",
     "@types/fingerprintjs2": "^2.0.0",
     "@types/jsonwebtoken": "^8.3.5",
     "@types/mustache": "^0.8.32",
-    "@types/node": "^12.12.7",
-    "@types/ramda": "^0.26.34",
+    "@types/node": "^12.12.14",
+    "@types/ramda": "^0.26.36",
     "@types/rc-slider": "^8.6.5",
-    "@types/react": "^16.9.11",
+    "@types/react": "^16.9.13",
     "@types/react-bootstrap": "^0.32.20",
     "@types/react-dom": "^16.9.4",
     "@types/react-helmet": "^5.0.14",
     "@types/react-responsive": "^8.0.2",
-    "@types/react-router-dom": "^5.1.2",
+    "@types/react-router-dom": "^5.1.3",
     "@types/react-scroll": "^1.5.4",
     "@types/styled-components": "^4.4.0",
     "@types/uuid": "^3.4.6",
     "@types/yup": "^0.26.24",
-    "apollo": "^2.19.0",
-    "babel-plugin-import": "^1.12.2",
-    "customize-cra": "^0.8.0",
+    "apollo": "^2.21.1",
+    "babel-plugin-import": "^1.13.0",
+    "customize-cra": "^0.9.1",
     "less-loader": "^5.0.0",
     "prettier": "^1.19.1",
     "react-app-rewire-hot-loader": "^2.0.1",
     "react-app-rewired": "^2.1.5",
-    "react-hot-loader": "^4.12.17",
+    "react-hot-loader": "^4.12.18",
     "react-snapshot": "^1.3.0",
     "source-map-explorer": "^2.1.1",
     "typescript": "^3.7.2"
