--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "dependencies": {
     "@apollo/react-hooks": "^3.1.3",
+    "@hot-loader/react-dom": "^16.11.0",
     "antd": "3.23.6",
     "apollo-cache-inmemory": "^1.6.3",
     "apollo-client": "^2.6.4",
