--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "analyze": "source-map-explorer 'build/static/js/*.js'",
     "start": "react-app-rewired start",
-    "build": "react-app-rewired build && react-snapshot",
+    "build": "react-app-rewired build",
+    "postbuild": "react-snap",
     "test": "react-scripts test",
     "storybook": "start-storybook -p 9009 -s public",
     "build-storybook": "build-storybook -s public",
@@ -64,6 +65,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.2.0",
     "react-scroll": "^1.7.14",
+    "react-snap": "^1.23.0",
     "react-social-login": "^3.4.6",
     "react-sortablejs": "^1.5.1",
     "react-svg": "^10.0.25",
