--- a/.env
+++ b/.env
@@ -1,13 +1,12 @@
 PORT=5000
 
 # Hasura
-REACT_APP_BACKEND_ENDPOINT=https://350r1poly2.execute-api.us-east-1.amazonaws.com/dev
-REACT_APP_GRAPHQL_ENDPOINT=https://hasura-dev.kolable.com/v1/graphql
+REACT_APP_BACKEND_ENDPOINT=https://bwn7wxiez5.execute-api.us-east-1.amazonaws.com/dev
+REACT_APP_GRAPHQL_ENDPOINT=https://api-dev.kolable.com/v1/graphql
 REACT_APP_CLAIMS_NAMESPACE=https://hasura.io/jwt/claims
 
 # AWS
-REACT_APP_S3_BUCKET=kolable-dev
-REACT_APP_S3_PUBLIC_BUCKET=files-dev.kolable.com
+REACT_APP_S3_BUCKET=static-dev.kolable.com
 
 # Modules
 REACT_APP_MODULE_MEMBERSHIPCARD=DISABLED
