--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build": "react-app-rewired build",
     "test": "react-scripts test",
     "typegen": "apollo client:codegen ./src/types.d.ts --outputFlat --target typescript",
-    "format": "./node_modules/.bin/prettier --write './src/**/*.tsx'"
+    "format:organize-imports": "organize-imports-cli ./src/**/*.ts[x]",
+    "format:prettier": "prettier --write ./src/**/*.ts[x]",
+    "format": "npm run format:organize-imports && npm run format:prettier"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -96,12 +98,27 @@
     "apollo": "^2.21.2",
     "babel-plugin-import": "^1.13.0",
     "customize-cra": "^0.9.1",
+    "husky": ">=1",
     "less-loader": "^5.0.0",
+    "lint-staged": ">=8",
+    "organize-imports-cli": "^0.7.0",
     "prettier": "^1.19.1",
     "react-app-rewire-hot-loader": "^2.0.1",
     "react-app-rewired": "^2.1.5",
     "react-hot-loader": "^4.12.18",
     "source-map-explorer": "^2.2.1",
     "typescript": "^3.7.4"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.tsx": [
+      "organize-imports-cli",
+      "prettier --write",
+      "git add"
+    ]
   }
 }
