--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
     "typegen": "apollo client:codegen ./src/types.d.ts --outputFlat --target typescript",
     "format:organize-imports": "organize-imports-cli ./src/**/*.ts[x]",
     "format:prettier": "prettier --write ./src/**/*.ts[x]",
-    "format": "npm run format:organize-imports && npm run format:prettier"
+    "format": "npm run format:organize-imports && npm run format:prettier",
+    "trans:compile": "tsc --noEmit false --outDir src/extracted",
+    "trans:extract": "babel --config-file ./.intl.babelrc ./src/extracted > /dev/null",
+    "trans:manage": "node manageTranslations.js",
+    "trans:clean": "rm -rf ./src/extracted",
+    "trans": "npm run trans:clean && npm run trans:compile && npm run trans:extract && npm run trans:manage && npm run trans:clean"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -57,6 +62,7 @@
     "react-facebook-pixel": "^0.1.3",
     "react-ga": "^2.7.0",
     "react-helmet": "^5.2.1",
+    "react-intl": "^3.11.0",
     "react-messenger-customer-chat": "^0.7.2",
     "react-player": "1.14.2",
     "react-responsive": "^8.0.1",
@@ -77,6 +83,10 @@
     "yup": "^0.28.0"
   },
   "devDependencies": {
+    "@babel/cli": "^7.8.3",
+    "@babel/core": "^7.8.3",
+    "@babel/preset-env": "^7.8.3",
+    "@babel/preset-react": "^7.8.3",
     "@hot-loader/react-dom": "^16.11.0",
     "@types/braft-editor": "^2.2.0",
     "@types/fingerprintjs2": "^2.0.0",
@@ -97,6 +107,7 @@
     "@types/yup": "^0.26.27",
     "apollo": "^2.21.2",
     "babel-plugin-import": "^1.13.0",
+    "babel-plugin-react-intl": "^5.1.17",
     "customize-cra": "^0.9.1",
     "husky": ">=1",
     "less-loader": "^5.0.0",
@@ -106,6 +117,7 @@
     "react-app-rewire-hot-loader": "^2.0.1",
     "react-app-rewired": "^2.1.5",
     "react-hot-loader": "^4.12.18",
+    "react-intl-translations-manager": "^5.0.3",
     "source-map-explorer": "^2.2.1",
     "typescript": "^3.7.4"
   },
