--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   },
   "dependencies": {
     "@apollo/react-hooks": "^3.1.3",
+    "@types/moment-timezone": "^0.5.12",
     "antd": "3.26.6",
     "apollo-cache-inmemory": "^1.6.5",
     "apollo-client": "^2.6.8",
@@ -50,6 +51,7 @@
     "graphql-tag": "^2.10.1",
     "jsonwebtoken": "^8.5.1",
     "less": "^3.10.3",
+    "moment-timezone": "^0.5.28",
     "mustache": "^3.2.1",
     "node-sass": "^4.13.0",
     "query-string": "^6.9.0",
