--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 PORT=5000
 
 # Hasura
-REACT_APP_BACKEND_ENDPOINT=https://bwn7wxiez5.execute-api.us-east-1.amazonaws.com/dev
-REACT_APP_GRAPHQL_ENDPOINT=https://hasura-dev.kolable.com/v1/graphql
+REACT_APP_BACKEND_ENDPOINT=https://rest-dev.kolable.com/v1
+REACT_APP_GRAPHQL_ENDPOINT=https://api-dev.kolable.com/v1/graphql
 REACT_APP_CLAIMS_NAMESPACE=https://hasura.io/jwt/claims
 NODE_VERSION=12
 NPM_VERSION=6
