[BUGFIX] fix merchandise refetching data and translations

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,7 @@
         "fingerprintjs",
         "hant",
         "hasura",
+        "imgs",
         "inmemory",
         "jsonb",
         "kolable",
