[BUGFIX] specify the versions of build tools

--- a/.env
+++ b/.env
@@ -4,6 +4,9 @@ PORT=5000
 REACT_APP_BACKEND_ENDPOINT=https://bwn7wxiez5.execute-api.us-east-1.amazonaws.com/dev
 REACT_APP_GRAPHQL_ENDPOINT=https://hasura-dev.kolable.com/v1/graphql
 REACT_APP_CLAIMS_NAMESPACE=https://hasura.io/jwt/claims
+NODE_VERSION=12
+NPM_VERSION=6
+YARN_VERSION=2
 
 # AWS
 REACT_APP_S3_BUCKET=static-dev.kolable.com
