--- a/package.json
+++ b/package.json
@@ -33,95 +33,94 @@
     ]
   },
   "dependencies": {
-    "@apollo/react-hooks": "^3.1.3",
-    "@types/moment-timezone": "^0.5.12",
-    "antd": "3.26.6",
-    "apollo-cache-inmemory": "^1.6.5",
-    "apollo-client": "^2.6.8",
-    "apollo-link": "^1.2.13",
-    "apollo-link-context": "^1.0.19",
-    "apollo-link-error": "^1.1.12",
-    "apollo-link-http": "^1.5.16",
-    "aws-sdk": "^2.600.0",
-    "axios": "^0.19.1",
-    "braft-editor": "^2.3.8",
+    "@apollo/react-hooks": "^3.1.5",
+    "antd": "3",
+    "apollo-cache-inmemory": "^1.6.6",
+    "apollo-client": "^2.6.10",
+    "apollo-link": "^1.2.14",
+    "apollo-link-context": "^1.0.20",
+    "apollo-link-error": "^1.1.13",
+    "apollo-link-http": "^1.5.17",
+    "aws-sdk": "^2.679.0",
+    "axios": "^0.19.2",
+    "braft-editor": "^2.3.9",
     "coupon-code": "^0.4.5",
     "fingerprintjs2": "^2.1.0",
-    "graphql": "^14.5.8",
-    "graphql-tag": "^2.10.1",
+    "graphql-tag": "^2.10.3",
     "jsonwebtoken": "^8.5.1",
-    "less": "^3.10.3",
-    "moment-timezone": "^0.5.28",
-    "mustache": "^3.2.1",
-    "node-sass": "^4.13.0",
-    "query-string": "^6.9.0",
-    "ramda": "^0.26.1",
-    "rc-slider": "^8.7.1",
-    "rc-tooltip": "^4.0.0-alpha.3",
-    "react": "^16.12.0",
-    "react-bootstrap": "^1.0.0-beta.16",
-    "react-dom": "^16.12.0",
+    "less": "^3.11.1",
+    "moment-timezone": "^0.5.31",
+    "mustache": "^4.0.1",
+    "node-sass": "^4.14.1",
+    "query-string": "^6.12.1",
+    "ramda": "^0.27.0",
+    "rc-slider": "^9.2.4",
+    "rc-tooltip": "^4.0.3",
+    "react": "^16.13.1",
+    "react-bootstrap": "^1.0.1",
+    "react-dom": "^16.13.1",
     "react-facebook-pixel": "^0.1.3",
     "react-ga": "^2.7.0",
-    "react-helmet": "^5.2.1",
-    "react-intl": "^3.11.0",
+    "react-helmet": "^6.0.0",
+    "react-intl": "^4.5.5",
     "react-messenger-customer-chat": "^0.7.2",
-    "react-player": "1.14.2",
-    "react-responsive": "^8.0.1",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "^3.3.0",
-    "react-scroll": "^1.7.15",
-    "react-social-login": "^3.4.6",
+    "react-player": "^2.0.1",
+    "react-responsive": "^8.0.3",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "^3.4.1",
+    "react-scroll": "^1.7.16",
+    "react-social-login": "^3.4.7",
     "react-sortablejs": "^1.5.1",
-    "react-svg": "^11.0.6",
-    "schema-dts": "^0.4.5",
+    "react-svg": "^11.0.22",
+    "schema-dts": "^0.6.0",
     "sortablejs": "^1.10.2",
-    "styled-components": "^4.4.1",
-    "styled-system": "^5.1.4",
+    "styled-components": "^5.1.0",
+    "styled-system": "^5.1.5",
     "throttle-typescript": "^1.0.1",
-    "use-query-params": "^0.5.0",
+    "use-query-params": "^1.1.3",
     "use-react-router": "^1.0.7",
-    "uuid": "^3.3.3",
-    "yup": "^0.28.0"
+    "uuid": "^8.0.0",
+    "yup": "^0.28.5"
   },
   "devDependencies": {
-    "@babel/cli": "^7.8.3",
-    "@babel/core": "^7.8.3",
-    "@babel/preset-env": "^7.8.3",
-    "@babel/preset-react": "^7.8.3",
-    "@hot-loader/react-dom": "^16.11.0",
+    "@babel/cli": "^7.8.4",
+    "@babel/core": "^7.9.6",
+    "@babel/preset-env": "^7.9.6",
+    "@babel/preset-react": "^7.9.4",
+    "@hot-loader/react-dom": "^16.13.0",
     "@types/braft-editor": "^2.2.0",
     "@types/fingerprintjs2": "^2.0.0",
-    "@types/jsonwebtoken": "^8.3.5",
-    "@types/mustache": "^0.8.32",
-    "@types/node": "^13.1.5",
-    "@types/ramda": "^0.26.39",
+    "@types/jsonwebtoken": "^8.5.0",
+    "@types/moment-timezone": "^0.5.13",
+    "@types/mustache": "^4.0.1",
+    "@types/node": "^14.0.1",
+    "@types/ramda": "^0.27.5",
     "@types/rc-slider": "^8.6.5",
-    "@types/react": "^16.9.17",
-    "@types/react-bootstrap": "^0.32.20",
-    "@types/react-dom": "^16.9.4",
-    "@types/react-helmet": "^5.0.15",
+    "@types/react": "^16.9.35",
+    "@types/react-bootstrap": "^1.0.1",
+    "@types/react-dom": "^16.9.8",
+    "@types/react-helmet": "^6.0.0",
     "@types/react-responsive": "^8.0.2",
-    "@types/react-router-dom": "^5.1.3",
-    "@types/react-scroll": "^1.5.4",
-    "@types/styled-components": "^4.4.2",
-    "@types/uuid": "^3.4.6",
-    "@types/yup": "^0.26.27",
-    "apollo": "^2.21.2",
+    "@types/react-router-dom": "^5.1.5",
+    "@types/react-scroll": "^1.5.5",
+    "@types/styled-components": "^5.1.0",
+    "@types/uuid": "^7.0.3",
+    "@types/yup": "^0.28.3",
+    "apollo": "^2.27.4",
     "babel-plugin-import": "^1.13.0",
-    "babel-plugin-react-intl": "^5.1.17",
+    "babel-plugin-react-intl": "^7.5.8",
     "customize-cra": "^0.9.1",
-    "husky": ">=1",
-    "less-loader": "^5.0.0",
-    "lint-staged": ">=8",
+    "husky": "^4.2.5",
+    "less-loader": "5",
+    "lint-staged": "^10.2.4",
     "organize-imports-cli": "^0.7.0",
-    "prettier": "^1.19.1",
+    "prettier": "^2.0.5",
     "react-app-rewire-hot-loader": "^2.0.1",
-    "react-app-rewired": "^2.1.5",
-    "react-hot-loader": "^4.12.18",
+    "react-app-rewired": "^2.1.6",
+    "react-hot-loader": "^4.12.21",
     "react-intl-translations-manager": "^5.0.3",
-    "source-map-explorer": "^2.2.1",
-    "typescript": "^3.7.4"
+    "source-map-explorer": "^2.4.2",
+    "typescript": "^3.9.2"
   },
   "husky": {
     "hooks": {
