--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "apollo-link-context": "^1.0.20",
     "apollo-link-error": "^1.1.13",
     "apollo-link-http": "^1.5.17",
-    "aws-sdk": "^2.679.0",
+    "aws-sdk": "^2.680.0",
     "axios": "^0.19.2",
     "braft-editor": "^2.3.9",
     "coupon-code": "^0.4.5",
@@ -80,7 +80,7 @@
     "use-query-params": "^1.1.3",
     "use-react-router": "^1.0.7",
     "uuid": "^8.0.0",
-    "yup": "^0.28.5"
+    "yup": "0.28"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
@@ -93,8 +93,8 @@
     "@types/jsonwebtoken": "^8.5.0",
     "@types/moment-timezone": "^0.5.13",
     "@types/mustache": "^4.0.1",
-    "@types/node": "^14.0.1",
-    "@types/ramda": "^0.27.5",
+    "@types/node": "^14.0.4",
+    "@types/ramda": "^0.27.6",
     "@types/rc-slider": "^8.6.5",
     "@types/react": "^16.9.35",
     "@types/react-bootstrap": "^1.0.1",
@@ -104,8 +104,8 @@
     "@types/react-router-dom": "^5.1.5",
     "@types/react-scroll": "^1.5.5",
     "@types/styled-components": "^5.1.0",
-    "@types/uuid": "^7.0.3",
-    "@types/yup": "^0.28.3",
+    "@types/uuid": "^8.0.0",
+    "@types/yup": "0.28",
     "apollo": "^2.27.4",
     "babel-plugin-import": "^1.13.0",
     "babel-plugin-react-intl": "^7.5.8",
@@ -120,7 +120,7 @@
     "react-hot-loader": "^4.12.21",
     "react-intl-translations-manager": "^5.0.3",
     "source-map-explorer": "^2.4.2",
-    "typescript": "^3.9.2"
+    "typescript": "^3.9.3"
   },
   "husky": {
     "hooks": {
