[FEATURE] update react sortable js

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,6 +16,7 @@
         "logined",
         "openid",
         "refetch",
+        "sortablejs",
         "tabkey",
         "tappay",
         "texttrack",
