--- a/package.json
+++ b/package.json
@@ -78,8 +78,7 @@
     "throttle-typescript": "^1.0.1",
     "use-query-params": "^1.1.3",
     "use-react-router": "^1.0.7",
-    "uuid": "^8.1.0",
-    "yup": "0.28"
+    "uuid": "^8.1.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.10.1",
@@ -104,7 +103,6 @@
     "@types/react-scroll": "^1.5.5",
     "@types/styled-components": "^5.1.0",
     "@types/uuid": "^8.0.0",
-    "@types/yup": "0.28",
     "apollo": "^2.28.0",
     "babel-plugin-import": "^1.13.0",
     "babel-plugin-react-intl": "^7.5.16",
