--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "apollo-link-context": "^1.0.20",
     "apollo-link-error": "^1.1.13",
     "apollo-link-http": "^1.5.17",
+    "audio-recorder-polyfill": "^0.3.6",
     "aws-sdk": "^2.711.0",
     "axios": "^0.19.2",
     "braft-editor": "^2.3.9",
@@ -71,11 +72,13 @@
     "react-sortablejs": "^2.0.11",
     "react-svg": "^11.0.29",
     "schema-dts": "^0.6.0",
+    "standardized-audio-context": "^24.1.22",
     "styled-components": "^5.1.1",
     "styled-system": "^5.1.5",
     "throttle-typescript": "^1.0.1",
     "use-query-params": "^1.1.5",
-    "uuid": "^8.2.0"
+    "uuid": "^8.2.0",
+    "wavesurfer.js": "^4.0.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.10.4",
@@ -99,6 +102,7 @@
     "@types/react-scroll": "^1.5.5",
     "@types/styled-components": "^5.1.1",
     "@types/uuid": "^8.0.0",
+    "@types/wavesurfer.js": "^3.3.1",
     "apollo": "^2.28.3",
     "babel-plugin-import": "^1.13.0",
     "babel-plugin-react-intl": "^7.5.28",
