--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "apollo-link-error": "^1.1.13",
     "apollo-link-http": "^1.5.17",
     "audio-recorder-polyfill": "^0.3.6",
+    "audiobuffer-to-wav": "^1.0.0",
     "aws-sdk": "^2.711.0",
     "axios": "^0.19.2",
     "braft-editor": "^2.3.9",
@@ -86,6 +87,7 @@
     "@babel/preset-env": "^7.10.4",
     "@babel/preset-react": "^7.10.4",
     "@hot-loader/react-dom": "^16.13.0",
+    "@types/audiobuffer-to-wav": "^1.0.0",
     "@types/braft-editor": "^2.2.0",
     "@types/fingerprintjs2": "^2.0.0",
     "@types/jsonwebtoken": "^8.5.0",
