--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
   "dependencies": {
     "@ant-design/compatible": "^1.0.4",
     "@ant-design/icons": "^4.2.1",
-    "@apollo/react-hooks": "^3.1.5",
+    "@apollo/react-hooks": "3",
     "antd": "^4.4.3",
     "apollo-cache-inmemory": "^1.6.6",
     "apollo-client": "^2.6.10",
@@ -124,7 +124,7 @@
     "react-hot-loader": "^4.12.21",
     "react-intl-translations-manager": "^5.0.3",
     "source-map-explorer": "^2.4.2",
-    "typescript": "^3.9.6"
+    "typescript": "^3.9.7"
   },
   "husky": {
     "hooks": {
