--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "@ant-design/compatible": "^1.0.4",
     "@ant-design/icons": "^4.2.1",
     "@apollo/react-hooks": "3",
-    "antd": "^4.4.3",
+    "antd": "4.4.3",
     "apollo-cache-inmemory": "^1.6.6",
     "apollo-client": "^2.6.10",
     "apollo-link": "^1.2.14",
