[FORMAT] format form props and events

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,6 +17,7 @@
         "openid",
         "refetch",
         "sortablejs",
+        "speciality",
         "tabkey",
         "tappay",
         "texttrack",
