--- a/package.json
+++ b/package.json
@@ -83,7 +83,8 @@
     "throttle-typescript": "^1.0.1",
     "use-query-params": "^1.1.5",
     "uuid": "^8.2.0",
-    "wavesurfer.js": "^4.0.1"
+    "wavesurfer.js": "^4.0.1",
+    "workerize-loader": "^1.3.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.10.4",
