[BUGFIX] fix audio recorder useEffect exit

--- a/package.json
+++ b/package.json
@@ -43,7 +43,6 @@
     "apollo-link-context": "^1.0.20",
     "apollo-link-error": "^1.1.13",
     "apollo-link-http": "^1.5.17",
-    "audio-recorder-polyfill": "^0.3.6",
     "audiobuffer-to-wav": "^1.0.0",
     "aws-sdk": "^2.711.0",
     "axios": "^0.19.2",
@@ -76,6 +75,7 @@
     "react-social-login": "^3.4.8",
     "react-sortablejs": "^2.0.11",
     "react-svg": "^11.0.29",
+    "recorder-js": "^1.0.7",
     "schema-dts": "^0.6.0",
     "standardized-audio-context": "^24.1.22",
     "styled-components": "^5.1.1",
@@ -108,6 +108,7 @@
     "@types/react-responsive": "^8.0.2",
     "@types/react-router-dom": "^5.1.5",
     "@types/react-scroll": "^1.5.5",
+    "@types/recorder-js": "^1.0.1",
     "@types/styled-components": "^5.1.1",
     "@types/uuid": "^8.0.0",
     "@types/wavesurfer.js": "^3.3.1",
