--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "react-svg": "^11.0.29",
     "recorder-js": "^1.0.7",
     "schema-dts": "^0.6.0",
+    "soundtouchjs": "^0.1.23",
     "standardized-audio-context": "^24.1.22",
     "styled-components": "^5.1.1",
     "styled-system": "^5.1.5",
