--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "jsonwebtoken": "^8.5.1",
     "lamejs": "^1.2.0",
     "less": "^3.11.3",
+    "lodash": "^4.17.20",
     "moment": "^2.27.0",
     "moment-timezone": "^0.5.31",
     "mustache": "^4.0.1",
@@ -98,6 +99,7 @@
     "@types/braft-editor": "^2.2.0",
     "@types/fingerprintjs2": "^2.0.0",
     "@types/jsonwebtoken": "^8.5.0",
+    "@types/lodash": "^4.14.161",
     "@types/moment": "^2.13.0",
     "@types/moment-timezone": "^0.5.13",
     "@types/mustache": "^4.0.1",
