[BUGFIX] fix table custom filter and use query filter

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,7 @@
         "fingerprintjs",
         "hant",
         "hasura",
+        "ilike",
         "imgs",
         "inmemory",
         "jsonb",
