--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "apollo-link-context": "^1.0.20",
     "apollo-link-error": "^1.1.13",
     "apollo-link-http": "^1.5.17",
+    "audio-recorder-polyfill": "^0.3.8",
     "audiobuffer-to-wav": "^1.0.0",
     "aws-sdk": "^2.711.0",
     "axios": "^0.19.2",
