[FEATURE] add member speciality

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,6 +19,7 @@
         "openid",
         "refetch",
         "sortablejs",
+        "specialities",
         "speciality",
         "tabkey",
         "tappay",
