--- a/package.json
+++ b/package.json
@@ -33,10 +33,10 @@
     ]
   },
   "dependencies": {
-    "@ant-design/compatible": "^1.0.4",
-    "@ant-design/icons": "^4.2.1",
+    "@ant-design/compatible": "^1.0.8",
+    "@ant-design/icons": "^4.2.2",
     "@apollo/react-hooks": "3",
-    "antd": "4.4.3",
+    "antd": "^4.7.0",
     "apollo-cache-inmemory": "^1.6.6",
     "apollo-client": "^2.6.10",
     "apollo-link": "^1.2.14",
@@ -46,92 +46,71 @@
     "apollo-link-http": "^1.5.17",
     "audio-recorder-polyfill": "^0.3.8",
     "audiobuffer-to-wav": "^1.0.0",
-    "aws-sdk": "^2.711.0",
-    "axios": "^0.19.2",
+    "axios": "^0.20.0",
     "braft-editor": "^2.3.9",
     "coupon-code": "^0.4.5",
-    "fingerprintjs2": "^2.1.0",
-    "graphql-tag": "^2.10.3",
+    "graphql-tag": "^2.11.0",
     "jsonwebtoken": "^8.5.1",
     "lamejs": "^1.2.0",
-    "less": "^3.11.3",
+    "less": "^3.12.2",
     "lodash": "^4.17.20",
-    "moment": "^2.27.0",
+    "moment": "^2.29.1",
     "moment-timezone": "^0.5.31",
-    "mustache": "^4.0.1",
     "node-sass": "^4.14.1",
-    "query-string": "^6.13.1",
-    "ramda": "^0.27.0",
-    "react": "^16.13.1",
-    "react-bootstrap": "^1.1.1",
-    "react-dom": "^16.13.1",
-    "react-facebook-pixel": "^0.1.3",
-    "react-ga": "^3.1.2",
-    "react-helmet": "^6.1.0",
-    "react-intl": "^5.0.2",
-    "react-messenger-customer-chat": "^0.8.0",
-    "react-player": "^2.5.0",
+    "nosleep.js": "^0.11.0",
+    "query-string": "^6.13.6",
+    "ramda": "^0.27.1",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
+    "react-intl": "^5.8.6",
+    "react-player": "^2.6.2",
     "react-responsive": "^8.1.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^3.4.1",
-    "react-scroll": "^1.7.16",
-    "react-social-login": "^3.4.8",
-    "react-sortablejs": "^2.0.11",
-    "react-svg": "^11.0.29",
-    "recorder-js": "^1.0.7",
-    "schema-dts": "^0.6.0",
-    "soundtouchjs": "^0.1.23",
-    "standardized-audio-context": "^24.1.22",
-    "styled-components": "^5.1.1",
-    "styled-system": "^5.1.5",
-    "throttle-typescript": "^1.0.1",
-    "use-query-params": "^1.1.5",
-    "uuid": "^8.2.0",
-    "wavesurfer.js": "^4.0.1",
-    "workerize-loader": "^1.3.0"
+    "react-scripts": "^3.4.3",
+    "react-social-login": "^3.4.10",
+    "react-sortablejs": "^6.0.0",
+    "sortablejs": "^1.12.0",
+    "standardized-audio-context": "^25.1.3",
+    "styled-components": "^5.2.0",
+    "use-query-params": "^1.1.8",
+    "uuid": "^8.3.1",
+    "wavesurfer.js": "^4.1.1"
   },
   "devDependencies": {
-    "@babel/cli": "^7.10.4",
-    "@babel/core": "^7.10.4",
-    "@babel/preset-env": "^7.10.4",
-    "@babel/preset-react": "^7.10.4",
+    "@babel/cli": "^7.12.1",
+    "@babel/core": "^7.12.3",
+    "@babel/preset-env": "^7.12.1",
+    "@babel/preset-react": "^7.12.1",
     "@hot-loader/react-dom": "^16.13.0",
     "@types/audiobuffer-to-wav": "^1.0.0",
     "@types/braft-editor": "^2.2.0",
-    "@types/fingerprintjs2": "^2.0.0",
     "@types/jsonwebtoken": "^8.5.0",
-    "@types/lodash": "^4.14.161",
-    "@types/moment": "^2.13.0",
+    "@types/lodash": "^4.14.162",
     "@types/moment-timezone": "^0.5.13",
-    "@types/mustache": "^4.0.1",
-    "@types/node": "^14.0.19",
-    "@types/ramda": "^0.27.10",
-    "@types/react": "^16.9.41",
-    "@types/react-bootstrap": "^1.0.1",
+    "@types/node": "^14.11.10",
+    "@types/ramda": "^0.27.29",
+    "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
-    "@types/react-helmet": "^6.0.0",
     "@types/react-responsive": "^8.0.2",
-    "@types/react-router-dom": "^5.1.5",
-    "@types/react-scroll": "^1.5.5",
-    "@types/recorder-js": "^1.0.1",
-    "@types/styled-components": "^5.1.1",
-    "@types/uuid": "^8.0.0",
+    "@types/react-router-dom": "^5.1.6",
+    "@types/styled-components": "^5.1.4",
+    "@types/uuid": "^8.3.0",
     "@types/wavesurfer.js": "^3.3.1",
-    "apollo": "^2.28.3",
-    "babel-plugin-import": "^1.13.0",
-    "babel-plugin-react-intl": "^7.5.28",
+    "apollo": "^2.31.0",
+    "babel-plugin-import": "^1.13.1",
+    "babel-plugin-react-intl": "^8.2.7",
     "customize-cra": "^1.0.0",
-    "husky": "^4.2.5",
+    "husky": "^4.3.0",
     "less-loader": "5",
-    "lint-staged": "^10.2.11",
-    "organize-imports-cli": "^0.7.0",
-    "prettier": "^2.0.5",
+    "lint-staged": "^10.4.2",
+    "organize-imports-cli": "^0.8.0",
+    "prettier": "^2.1.2",
     "react-app-rewire-hot-loader": "^2.0.1",
     "react-app-rewired": "^2.1.6",
-    "react-hot-loader": "^4.12.21",
+    "react-hot-loader": "^4.13.0",
     "react-intl-translations-manager": "^5.0.3",
-    "source-map-explorer": "^2.4.2",
-    "typescript": "^3.9.7"
+    "source-map-explorer": "^2.5.0",
+    "typescript": "^4.0.3"
   },
   "husky": {
     "hooks": {
