--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "moment-timezone": "^0.5.31",
     "mustache": "^4.0.1",
     "node-sass": "^4.14.1",
+    "nosleep.js": "^0.11.0",
     "query-string": "^6.13.1",
     "ramda": "^0.27.0",
     "react": "^16.13.1",
