--- a/package.json
+++ b/package.json
@@ -87,7 +87,7 @@
     "@types/jsonwebtoken": "^8.5.0",
     "@types/lodash": "^4.14.162",
     "@types/moment-timezone": "^0.5.13",
-    "@types/node": "^14.11.10",
+    "@types/node": "^14.11.11",
     "@types/ramda": "^0.27.29",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
@@ -110,7 +110,7 @@
     "react-hot-loader": "^4.13.0",
     "react-intl-translations-manager": "^5.0.3",
     "source-map-explorer": "^2.5.0",
-    "typescript": "^4.0.3"
+    "typescript": "3"
   },
   "husky": {
     "hooks": {
