--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "lodash": "^4.17.20",
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.31",
+    "mustache": "^4.0.1",
     "node-sass": "^4.14.1",
     "nosleep.js": "^0.11.0",
     "query-string": "^6.13.6",
@@ -89,7 +90,8 @@
     "@types/jsonwebtoken": "^8.5.0",
     "@types/lodash": "^4.14.162",
     "@types/moment-timezone": "^0.5.13",
-    "@types/node": "^14.11.10",
+    "@types/mustache": "^4.0.1",
+    "@types/node": "^14.11.11",
     "@types/ramda": "^0.27.29",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
