--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "@ant-design/compatible": "^1.0.8",
     "@ant-design/icons": "^4.2.2",
     "@apollo/react-hooks": "3",
+    "@fullcalendar/daygrid": "^5.3.2",
+    "@fullcalendar/react": "^5.3.1",
     "antd": "^4.7.2",
     "apollo-cache-inmemory": "^1.6.6",
     "apollo-client": "^2.6.10",
