--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -31,6 +31,7 @@
         "unnest",
         "uploader",
         "upsert",
+        "virtualness",
         "youtube"
     ],
     "typescript.tsdk": "node_modules/typescript/lib"
