--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
     "react-player": "^2.6.2",
     "react-responsive": "^8.1.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^3.4.3",
+    "react-scripts": "3.4.4",
     "react-social-login": "^3.4.10",
     "react-sortablejs": "^6.0.0",
     "sortablejs": "^1.12.0",
@@ -100,7 +100,7 @@
     "@types/styled-components": "^5.1.4",
     "@types/uuid": "^8.3.0",
     "@types/wavesurfer.js": "^3.3.1",
-    "apollo": "^2.31.0",
+    "apollo": "^2.31.1",
     "babel-plugin-import": "^1.13.1",
     "babel-plugin-react-intl": "^8.2.7",
     "customize-cra": "^1.0.0",
