--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -29,6 +29,7 @@
         "texttracks",
         "timestamptz",
         "unnest",
+        "unpublishing",
         "uploader",
         "upsert",
         "virtualness",
