--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 PORT=5000
 
 # Hasura
-REACT_APP_BACKEND_ENDPOINT=https://rest-dev.lodestar.cc/v1
+REACT_APP_API_HOST=rest-dev.lodestar.cc/v1
 REACT_APP_GRAPHQL_ENDPOINT=https://hasura-dev.kolable.com/v1/graphql
 REACT_APP_CLAIMS_NAMESPACE=https://hasura.io/jwt/claims
 NODE_VERSION=12
