[FEATURE] add env management

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "analyze": "source-map-explorer 'build/static/js/*.js'",
     "start": "react-app-rewired start",
     "build": "CI=false react-app-rewired build",
+    "build:staging": "env-cmd -f .env.development npm run build",
     "test": "react-scripts test",
     "typegen": "apollo client:codegen ./src/types.d.ts --outputFlat --target typescript",
     "format:organize-imports": "organize-imports-cli ./src/**/*.ts[x]",
@@ -104,6 +105,7 @@
     "babel-plugin-import": "^1.13.1",
     "babel-plugin-react-intl": "^8.2.7",
     "customize-cra": "^1.0.0",
+    "env-cmd": "^10.1.0",
     "husky": "^4.3.0",
     "less-loader": "5",
     "lint-staged": "^10.4.2",
