--- a/.env
+++ b/.env
@@ -1,14 +1,9 @@
-PORT=5000
-
 # Hasura
-REACT_APP_API_HOST=rest-dev.lodestar.cc/v1
-REACT_APP_GRAPHQL_ENDPOINT=https://hasura-dev.kolable.com/v1/graphql
-REACT_APP_CLAIMS_NAMESPACE=https://hasura.io/jwt/claims
-NODE_VERSION=12
-NPM_VERSION=6
-YARN_VERSION=2
+REACT_APP_API_HOST=
+REACT_APP_GRAPHQL_ENDPOINT=
+REACT_APP_CLAIMS_NAMESPACE=
 
 # AWS
-REACT_APP_S3_BUCKET=static-dev.kolable.com
+REACT_APP_S3_BUCKET=
 # WOWZA
-REACT_APP_STREAMING_APP=podcast-dev
+REACT_APP_STREAMING_APP=
