[FEATURE] add cursor-based member notes query

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,6 +19,7 @@
         "kolable",
         "logined",
         "openid",
+        "recordfile",
         "refetch",
         "sortablejs",
         "specialities",
