--- a/package.json
+++ b/package.json
@@ -116,7 +116,7 @@
     "react-hot-loader": "^4.13.0",
     "react-intl-translations-manager": "^5.0.3",
     "source-map-explorer": "^2.5.0",
-    "typescript": "3"
+    "typescript": "^4.1.3"
   },
   "husky": {
     "hooks": {
