--- a/package.json
+++ b/package.json
@@ -35,11 +35,11 @@
   },
   "dependencies": {
     "@ant-design/compatible": "^1.0.8",
-    "@ant-design/icons": "^4.2.2",
+    "@ant-design/icons": "^4.3.0",
     "@apollo/react-hooks": "3",
     "@fullcalendar/daygrid": "^5.3.2",
     "@fullcalendar/react": "^5.3.1",
-    "antd": "^4.7.2",
+    "antd": "^4.9.4",
     "apollo-cache-inmemory": "^1.6.6",
     "apollo-client": "^2.6.10",
     "apollo-link": "^1.2.14",
@@ -64,13 +64,13 @@
     "nosleep.js": "^0.11.0",
     "query-string": "^6.13.6",
     "ramda": "^0.27.1",
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "react-intl": "^5.8.6",
     "react-player": "^2.6.2",
     "react-responsive": "^8.1.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.4",
+    "react-scripts": "^4.0.1",
     "react-social-login": "^3.4.10",
     "react-sortablejs": "^6.0.0",
     "sortablejs": "^1.12.0",
@@ -81,21 +81,21 @@
     "wavesurfer.js": "^4.1.1"
   },
   "devDependencies": {
-    "@babel/cli": "^7.12.1",
-    "@babel/core": "^7.12.3",
-    "@babel/preset-env": "^7.12.1",
-    "@babel/preset-react": "^7.12.1",
-    "@hot-loader/react-dom": "^16.13.0",
+    "@babel/cli": "^7.12.10",
+    "@babel/core": "^7.12.10",
+    "@babel/preset-env": "^7.12.11",
+    "@babel/preset-react": "^7.12.10",
+    "@hot-loader/react-dom": "^17.0.1",
     "@types/audiobuffer-to-wav": "^1.0.0",
     "@types/braft-editor": "^2.2.0",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/lodash": "^4.14.162",
     "@types/moment-timezone": "^0.5.13",
     "@types/mustache": "^4.0.1",
-    "@types/node": "^14.11.11",
+    "@types/node": "^14.14.16",
     "@types/ramda": "^0.27.29",
-    "@types/react": "^16.9.53",
-    "@types/react-dom": "^16.9.8",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
     "@types/react-responsive": "^8.0.2",
     "@types/react-router-dom": "^5.1.6",
     "@types/styled-components": "^5.1.4",
@@ -112,7 +112,7 @@
     "organize-imports-cli": "^0.8.0",
     "prettier": "^2.1.2",
     "react-app-rewire-hot-loader": "^2.0.1",
-    "react-app-rewired": "^2.1.6",
+    "react-app-rewired": "^2.1.8",
     "react-hot-loader": "^4.13.0",
     "react-intl-translations-manager": "^5.0.3",
     "source-map-explorer": "^2.5.0",
