--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@apollo/react-hooks": "3",
     "@fullcalendar/daygrid": "^5.3.2",
     "@fullcalendar/react": "^5.3.1",
+    "@types/md5": "^2.2.1",
     "antd": "^4.9.4",
     "apollo-cache-inmemory": "^1.6.6",
     "apollo-client": "^2.6.10",
@@ -57,6 +58,7 @@
     "lamejs": "^1.2.0",
     "less": "^3.12.2",
     "lodash": "^4.17.20",
+    "md5": "^2.3.0",
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.31",
     "mustache": "^4.0.1",
