--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@apollo/react-hooks": "3",
     "@fullcalendar/daygrid": "^5.3.2",
     "@fullcalendar/react": "^5.3.1",
+    "@types/react-star-rating-component": "^1.4.0",
     "@types/md5": "^2.2.1",
     "antd": "^4.9.4",
     "apollo-cache-inmemory": "^1.6.6",
@@ -75,6 +76,7 @@
     "react-scripts": "^4.0.1",
     "react-social-login": "^3.4.10",
     "react-sortablejs": "^6.0.0",
+    "react-star-rating-component": "^1.4.1",
     "sortablejs": "^1.12.0",
     "standardized-audio-context": "^25.1.3",
     "styled-components": "^5.2.0",
