--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -31,6 +31,7 @@
         "timestamptz",
         "unnest",
         "unpublishing",
+        "unreviewed",
         "uploader",
         "upsert",
         "virtualness",
