[FEATURE] add hashed assigned count and contacted member count

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "lodestar-app-admin": "git+https://5283f1eb2c0cbdec821bd2bc65e18c942c4d51f8:x-oauth-basic@github.com/urfit-tech/lodestar-app-admin.git#develop",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-scripts": "^4.0.1"
+    "react-scripts": "^4.0.1",
+    "sha.js": "^2.4.11"
   },
   "scripts": {
     "analyze": "source-map-explorer 'build/static/js/*.js'",
@@ -69,6 +70,7 @@
     "@types/react-dom": "^17.0.0",
     "@types/react-responsive": "^8.0.2",
     "@types/react-router-dom": "^5.1.6",
+    "@types/sha.js": "^2.4.0",
     "@types/styled-components": "^5.1.4",
     "@types/uuid": "^8.3.0",
     "@types/wavesurfer.js": "^3.3.1",
