--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
   "cSpell.words": [
     "antd",
     "ilike",
+    "shajs",
     "timestamptz"
   ],
   "typescript.tsdk": "node_modules/typescript/lib"
