[FEATURE] admin modal for note collection page

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -24,6 +24,7 @@
         "sortablejs",
         "specialities",
         "speciality",
+        "starttime",
         "tabkey",
         "tappay",
         "texttrack",
