--- a/package.json
+++ b/package.json
@@ -35,13 +35,11 @@
   },
   "dependencies": {
     "@ant-design/compatible": "^1.0.8",
-    "@ant-design/icons": "^4.3.0",
+    "@ant-design/icons": "^4.5.0",
     "@apollo/react-hooks": "3",
     "@fullcalendar/daygrid": "^5.3.2",
     "@fullcalendar/react": "^5.3.1",
-    "@types/react-star-rating-component": "^1.4.0",
-    "@types/md5": "^2.2.1",
-    "antd": "^4.9.4",
+    "antd": "4.9.4",
     "apollo-cache-inmemory": "^1.6.6",
     "apollo-client": "^2.6.10",
     "apollo-link": "^1.2.14",
@@ -51,62 +49,64 @@
     "apollo-link-http": "^1.5.17",
     "audio-recorder-polyfill": "^0.3.8",
     "audiobuffer-to-wav": "^1.0.0",
-    "axios": "^0.20.0",
+    "axios": "^0.21.1",
     "braft-editor": "^2.3.9",
     "coupon-code": "^0.4.5",
     "graphql-tag": "^2.11.0",
     "jsonwebtoken": "^8.5.1",
     "lamejs": "^1.2.0",
     "less": "^3.12.2",
-    "lodash": "^4.17.20",
+    "lodash": "^4.17.21",
     "md5": "^2.3.0",
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.31",
-    "mustache": "^4.0.1",
+    "mustache": "^4.1.0",
     "node-sass": "^4.14.1",
     "nosleep.js": "^0.11.0",
-    "query-string": "^6.13.6",
+    "query-string": "^6.14.1",
     "ramda": "^0.27.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-intl": "^5.8.6",
-    "react-player": "^2.6.2",
-    "react-responsive": "^8.1.0",
+    "react-intl": "^5.13.2",
+    "react-player": "^2.9.0",
+    "react-responsive": "^8.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^4.0.1",
-    "react-social-login": "^3.4.10",
+    "react-scripts": "^4.0.3",
+    "react-social-login": "^3.4.12",
     "react-sortablejs": "^6.0.0",
     "react-star-rating-component": "^1.4.1",
-    "sortablejs": "^1.12.0",
-    "standardized-audio-context": "^25.1.3",
-    "styled-components": "^5.2.0",
-    "use-query-params": "^1.1.8",
-    "uuid": "^8.3.1",
+    "sortablejs": "^1.13.0",
+    "standardized-audio-context": "^25.1.9",
+    "styled-components": "^5.2.1",
+    "use-query-params": "^1.2.0",
+    "uuid": "^8.3.2",
     "wavesurfer.js": "^4.1.1"
   },
   "devDependencies": {
-    "@babel/cli": "^7.12.10",
-    "@babel/core": "^7.12.10",
-    "@babel/preset-env": "^7.12.11",
-    "@babel/preset-react": "^7.12.10",
+    "@babel/cli": "^7.13.0",
+    "@babel/core": "^7.13.8",
+    "@babel/preset-env": "^7.13.9",
+    "@babel/preset-react": "^7.12.13",
     "@hot-loader/react-dom": "^17.0.1",
     "@types/audiobuffer-to-wav": "^1.0.0",
     "@types/braft-editor": "^2.2.0",
     "@types/jsonwebtoken": "^8.5.0",
-    "@types/lodash": "^4.14.162",
+    "@types/lodash": "^4.14.168",
+    "@types/md5": "^2.3.0",
     "@types/moment-timezone": "^0.5.13",
-    "@types/mustache": "^4.0.1",
-    "@types/node": "^14.14.16",
-    "@types/ramda": "^0.27.29",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
+    "@types/mustache": "^4.1.1",
+    "@types/node": "^14.14.31",
+    "@types/ramda": "^0.27.38",
+    "@types/react": "^17.0.2",
+    "@types/react-dom": "^17.0.1",
     "@types/react-responsive": "^8.0.2",
-    "@types/react-router-dom": "^5.1.6",
-    "@types/styled-components": "^5.1.4",
+    "@types/react-router-dom": "^5.1.7",
+    "@types/react-star-rating-component": "^1.4.0",
+    "@types/styled-components": "^5.1.7",
     "@types/uuid": "^8.3.0",
     "@types/wavesurfer.js": "^3.3.1",
-    "apollo": "^2.31.1",
-    "babel-plugin-import": "^1.13.1",
+    "apollo": "^2.32.5",
+    "babel-plugin-import": "^1.13.3",
     "babel-plugin-react-intl": "^8.2.7",
     "customize-cra": "^1.0.0",
     "env-cmd": "^10.1.0",
@@ -114,13 +114,13 @@
     "less-loader": "5",
     "lint-staged": "^10.4.2",
     "organize-imports-cli": "^0.8.0",
-    "prettier": "^2.1.2",
+    "prettier": "^2.2.1",
     "react-app-rewire-hot-loader": "^2.0.1",
     "react-app-rewired": "^2.1.8",
     "react-hot-loader": "^4.13.0",
     "react-intl-translations-manager": "^5.0.3",
     "source-map-explorer": "^2.5.0",
-    "typescript": "^4.1.3"
+    "typescript": "^4.2.2"
   },
   "husky": {
     "hooks": {
