[FEATURE] customize note collection page

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,7 +8,10 @@
     "ilike",
     "jitsi",
     "jsonb",
+    "nowrap",
+    "recordfile",
     "shajs",
+    "starttime",
     "timestamptz",
     "typegen",
     "wavesurfer"
