[REFACTOR] rename types.d.ts to hasura.d.ts

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,17 @@
 {
   "cSpell.words": [
     "antd",
+    "audiobuffer",
+    "braft",
+    "codegen",
+    "hasura",
     "ilike",
     "jitsi",
     "jsonb",
     "shajs",
-    "timestamptz"
+    "timestamptz",
+    "typegen",
+    "wavesurfer"
   ],
   "typescript.tsdk": "node_modules/typescript/lib"
 }
