--- a/package.json
+++ b/package.json
@@ -5,10 +5,7 @@
   "dependencies": {
     "@ant-design/charts": "^1.0.20",
     "chance": "^1.1.7",
-    "lodestar-app-admin": "git+https://5283f1eb2c0cbdec821bd2bc65e18c942c4d51f8:x-oauth-basic@github.com/urfit-tech/lodestar-app-admin.git#master",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-scripts": "^4.0.1"
+    "lodestar-app-admin": "git+https://5283f1eb2c0cbdec821bd2bc65e18c942c4d51f8:x-oauth-basic@github.com/urfit-tech/lodestar-app-admin.git#master"
   },
   "scripts": {
     "postinstall": "yarn upgrade lodestar-app-admin",
@@ -17,7 +14,7 @@
     "build": "CI=false react-app-rewired build",
     "build:staging": "env-cmd -f .env.development npm run build",
     "test": "react-scripts test",
-    "typegen": "apollo client:codegen ./src/types.d.ts --outputFlat --target typescript",
+    "typegen": "apollo client:codegen ./src/hasura.d.ts --outputFlat --target typescript",
     "format:organize-imports": "organize-imports-cli ./src/**/*.ts[x]",
     "format:prettier": "prettier --write ./src/**/*.ts[x]",
     "format": "npm run format:organize-imports && npm run format:prettier",
@@ -55,42 +52,45 @@
     ]
   },
   "devDependencies": {
-    "@babel/cli": "^7.12.10",
-    "@babel/core": "^7.12.10",
-    "@babel/preset-env": "^7.12.11",
-    "@babel/preset-react": "^7.12.10",
+    "@babel/cli": "^7.13.10",
+    "@babel/core": "^7.13.10",
+    "@babel/preset-env": "^7.13.10",
+    "@babel/preset-react": "^7.12.13",
     "@hot-loader/react-dom": "^17.0.1",
     "@types/audiobuffer-to-wav": "^1.0.0",
     "@types/braft-editor": "^2.2.0",
     "@types/chance": "^1.1.1",
     "@types/jsonwebtoken": "^8.5.0",
-    "@types/lodash": "^4.14.162",
+    "@types/lodash": "^4.14.168",
+    "@types/md5": "^2.3.0",
     "@types/moment-timezone": "^0.5.13",
-    "@types/mustache": "^4.0.1",
-    "@types/node": "^14.14.16",
-    "@types/ramda": "^0.27.29",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
+    "@types/mustache": "^4.1.1",
+    "@types/node": "^14.14.35",
+    "@types/ramda": "^0.27.39",
+    "@types/react": "^17.0.3",
+    "@types/react-dom": "^17.0.2",
     "@types/react-responsive": "^8.0.2",
-    "@types/react-router-dom": "^5.1.6",
-    "@types/styled-components": "^5.1.4",
+    "@types/react-router-dom": "^5.1.7",
+    "@types/react-star-rating-component": "^1.4.0",
+    "@types/styled-components": "^5.1.9",
     "@types/uuid": "^8.3.0",
     "@types/wavesurfer.js": "^3.3.1",
-    "apollo": "^2.31.1",
-    "babel-plugin-import": "^1.13.1",
+    "apollo": "^2.32.5",
+    "babel-plugin-import": "^1.13.3",
     "babel-plugin-react-intl": "^8.2.7",
     "customize-cra": "^1.0.0",
     "env-cmd": "^10.1.0",
     "husky": "^4.3.0",
-    "less-loader": "5",
-    "lint-staged": "^10.4.2",
+    "less": "^3.12.2",
+    "less-loader": "^7.1.0",
+    "lint-staged": "^10.5.4",
     "organize-imports-cli": "^0.8.0",
-    "prettier": "^2.1.2",
+    "prettier": "^2.2.1",
     "react-app-rewire-hot-loader": "^2.0.1",
     "react-app-rewired": "^2.1.8",
     "react-hot-loader": "^4.13.0",
     "react-intl-translations-manager": "^5.0.3",
-    "source-map-explorer": "^2.5.0",
-    "typescript": "^4.1.3"
+    "source-map-explorer": "^2.5.2",
+    "typescript": "^4.2.3"
   }
 }
