[FEATURE] add craft page

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@ant-design/compatible": "^1.0.8",
     "@ant-design/icons": "^4.5.0",
     "@apollo/react-hooks": "3",
+    "@craftjs/core": "^0.1.0-beta.19",
     "@fullcalendar/daygrid": "^5.3.2",
     "@fullcalendar/react": "^5.3.1",
     "antd": "4.9.4",
@@ -68,6 +69,7 @@
     "ramda": "^0.27.1",
     "react": "^17.0.1",
     "react-calendar-heatmap": "^1.8.1",
+    "react-contenteditable": "^3.3.5",
     "react-dom": "^17.0.1",
     "react-intl": "^5.13.2",
     "react-player": "^2.9.0",
