[FEATURE] fix dependencies version

--- a/package.json
+++ b/package.json
@@ -58,20 +58,20 @@
     "@types/react-color": "^3.0.4",
     "@types/react-dom": "^17.0.8",
     "@types/react-responsive": "^8.0.2",
-    "@types/react-router-dom": "^5.1.7",
+    "@types/react-router-dom": "^5.1.5",
     "@types/react-star-rating-component": "^1.4.0",
     "@types/styled-components": "^5.1.9",
     "@types/uuid": "^8.3.0",
     "@types/wavesurfer.js": "^3.3.1",
     "antd": "4.9.4",
-    "apollo": "^2.32.5",
-    "apollo-cache-inmemory": "^1.6.6",
-    "apollo-client": "^2.6.10",
-    "apollo-link": "^1.2.14",
+    "apollo": "2.32.5",
+    "apollo-cache-inmemory": "1.6.6",
+    "apollo-client": "2.6.10",
+    "apollo-link": "1.2.14",
     "apollo-link-batch-http": "^1.2.14",
     "apollo-link-context": "^1.0.20",
-    "apollo-link-error": "^1.1.13",
-    "apollo-link-http": "^1.5.17",
+    "apollo-link-error": "1.1.13",
+    "apollo-link-http": "1.5.17",
     "audio-recorder-polyfill": "^0.3.8",
     "audiobuffer-to-wav": "^1.0.0",
     "axios": "^0.21.1",
@@ -81,8 +81,8 @@
     "coupon-code": "^0.4.5",
     "customize-cra": "^1.0.0",
     "env-cmd": "^10.1.0",
-    "graphql-tag": "^2.11.0",
-    "husky": "^4.3.0",
+    "graphql-tag": "2.12.5",
+    "husky": "4.3.8",
     "jsonwebtoken": "^8.5.1",
     "lamejs": "^1.2.0",
     "less": "^3.12.2",
@@ -95,36 +95,36 @@
     "moment-range": "^4.0.2",
     "moment-timezone": "^0.5.31",
     "mustache": "^4.1.0",
-    "node-sass": "^4.14.1",
+    "node-sass": "4.14.1",
     "nosleep.js": "^0.11.0",
-    "organize-imports-cli": "^0.8.0",
+    "organize-imports-cli": "0.7.0",
     "prettier": "^2.3.1",
-    "query-string": "^6.14.1",
-    "ramda": "^0.27.1",
-    "react": "^17.0.2",
+    "query-string": "^7.0.1",
+    "ramda": "0.27.0",
+    "react": "17.0.2",
     "react-app-rewire-hot-loader": "^2.0.1",
     "react-app-rewired": "^2.1.8",
     "react-calendar-heatmap": "^1.8.1",
-    "react-color": "^2.19.3",
+    "react-color": "2.19.3",
     "react-contenteditable": "^3.3.5",
-    "react-dom": "^17.0.2",
+    "react-dom": "17.0.2",
     "react-hot-loader": "^4.13.0",
-    "react-intl": "^5.20.9",
+    "react-intl": "5.20.9",
     "react-intl-translations-manager": "^5.0.3",
     "react-player": "^2.9.0",
-    "react-responsive": "^8.2.0",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "^4.0.3",
+    "react-responsive": "8.1.0",
+    "react-router-dom": "5.2.0",
+    "react-scripts": "4.0.3",
     "react-social-login": "^3.4.12",
     "react-sortablejs": "^6.0.0",
     "react-star-rating-component": "^1.4.1",
     "sortablejs": "^1.13.0",
     "source-map-explorer": "^2.5.2",
     "standardized-audio-context": "^25.1.9",
-    "styled-components": "^5.2.1",
+    "styled-components": "5.1.1",
     "typescript": "4.3.5",
-    "use-query-params": "^1.2.0",
-    "uuid": "^8.3.2",
+    "use-query-params": "1.2.3",
+    "uuid": "8.3.2",
     "wavesurfer.js": "^4.1.1"
   },
   "husky": {
