[FEATURE] integrate CraftProgramCollection and make setting draggable

--- a/package.json
+++ b/package.json
@@ -94,7 +94,7 @@
     "less-loader": "^7.1.0",
     "lint-staged": "^10.5.4",
     "lodash": "^4.17.21",
-    "lodestar-app-element": "urfit-tech/lodestar-app-element.git#master",
+    "lodestar-app-element": "urfit-tech/lodestar-app-element.git#9f3ff01b50984c79dab33031e78e6c1e2afb8640",
     "md5": "^2.3.0",
     "moment": "^2.29.1",
     "moment-range": "^4.0.2",
@@ -113,6 +113,7 @@
     "react-color": "2.19.3",
     "react-contenteditable": "^3.3.5",
     "react-dom": "17.0.2",
+    "react-draggable": "^4.4.4",
     "react-hot-loader": "^4.13.0",
     "react-intl": "5.20.9",
     "react-intl-translations-manager": "^5.0.3",
@@ -128,8 +129,7 @@
     "standardized-audio-context": "^25.1.9",
     "styled-components": "5.1.1",
     "ts-deep-pick": "0.2.2",
-    "typescript": "4.3.5",
-    "ts-deep-pick": "^0.2.2",
+    "typescript": "4.4.3",
     "use-query-params": "1.2.3",
     "uuid": "8.3.2",
     "wavesurfer.js": "^4.1.1"
