[FEATURE] program content add external link attachment

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,45 +1,46 @@
 {
-    "cSpell.words": [
-        "Hmmss",
-        "Sider",
-        "YYYYMMDD",
-        "acsi",
-        "antd",
-        "anticon",
-        "at",
-        "braft",
-        "codegen",
-        "daygrid",
-        "fingerprintjs",
-        "fullcalendar",
-        "hant",
-        "hasura",
-        "ilike",
-        "imgs",
-        "inmemory",
-        "jsonb",
-        "kolable",
-        "logined",
-        "openid",
-        "recordfile",
-        "refetch",
-        "sortablejs",
-        "specialities",
-        "speciality",
-        "starttime",
-        "tabkey",
-        "tappay",
-        "texttrack",
-        "texttracks",
-        "timestamptz",
-        "typegen",
-        "unnest",
-        "unpublishing",
-        "unreviewed",
-        "uploader",
-        "upsert",
-        "virtualness",
-        "youtube"
-    ],
-    "typescript.tsdk": "node_modules/typescript/lib"
+  "cSpell.words": [
+    "acsi",
+    "antd",
+    "anticon",
+    "at",
+    "braft",
+    "codegen",
+    "daygrid",
+    "fingerprintjs",
+    "fullcalendar",
+    "hant",
+    "hasura",
+    "Hmmss",
+    "ilike",
+    "imgs",
+    "inmemory",
+    "jsonb",
+    "kolable",
+    "logined",
+    "Noembed",
+    "openid",
+    "recordfile",
+    "refetch",
+    "Sider",
+    "sortablejs",
+    "specialities",
+    "speciality",
+    "starttime",
+    "tabkey",
+    "tappay",
+    "texttrack",
+    "texttracks",
+    "timestamptz",
+    "typegen",
+    "unnest",
+    "unpublishing",
+    "unreviewed",
+    "uploader",
+    "upsert",
+    "virtualness",
+    "youtube",
+    "YYYYMMDD"
+  ],
+  "typescript.tsdk": "node_modules/typescript/lib"
 }
