[FEATURE] member collection filter adjustment

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,7 +18,8 @@
     "timestamptz",
     "typegen",
     "wavesurfer",
-    "chailease"
+    "chailease",
+    "logined"
   ],
   "typescript.tsdk": "node_modules/typescript/lib"
 }
