[FEATURE] make craft builder better

--- a/package.json
+++ b/package.json
@@ -126,6 +126,7 @@
     "react-social-login": "^3.4.12",
     "react-sortablejs": "^6.0.0",
     "react-star-rating-component": "^1.4.1",
+    "react-style-editor": "^0.4.0",
     "react-styled-frame": "^1.1.0",
     "sortablejs": "^1.13.0",
     "source-map-explorer": "^2.5.2",
