[FEATURE] fixed react-sortablejs version

--- a/package.json
+++ b/package.json
@@ -125,7 +125,7 @@
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.3",
     "react-social-login": "^3.4.12",
-    "react-sortablejs": "^6.0.0",
+    "react-sortablejs": "6.1.1",
     "react-star-rating-component": "^1.4.1",
     "react-style-editor": "^0.4.0",
     "react-styled-frame": "^1.1.0",
