feat: REACT_APP_KOLABLE_SERVER_ENDPOINT env variable

--- a/.env.production
+++ b/.env.production
@@ -5,3 +5,6 @@ REACT_APP_CLAIMS_NAMESPACE=https://hasura.io/jwt/claims
 
 # AWS
 REACT_APP_S3_BUCKET=static.kolable.com
+
+# Server
+REACT_APP_KOLABLE_SERVER_ENDPOINT=/enterprise
