--- a/.env.staging
+++ b/.env.staging
@@ -5,3 +5,6 @@ REACT_APP_CLAIMS_NAMESPACE=https://hasura.io/jwt/claims
 
 # AWS
 REACT_APP_S3_BUCKET=static-dev.kolable.com
+
+# Server
+REACT_APP_KOLABLE_SERVER_ENDPOINT=https://demo.lodestar-dev.cc/enterprise
